--- a/src/css/blocks/slider-digits.scss
+++ b/src/css/blocks/slider-digits.scss
@@ -200,8 +200,6 @@
 
 	.slider-digits {
 
-		margin-bottom: 70px;
-
 		&__label {
 			left: 0;
 		}
@@ -284,8 +282,6 @@
 @media all and (max-width: 600px) {
 
 	.slider-digits {
-
-		margin-bottom: 70px;
 
 		&__content {
 			margin: 0 -20px;
